[gd_scene load_steps=17 format=2]

[ext_resource path="res://ui/options_panel.gd" type="Script" id=1]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://icons/back_icon.svg" type="Texture" id=3]
[ext_resource path="res://icons/tick_icon.svg" type="Texture" id=4]
[ext_resource path="res://icons/singleplayer_icon.svg" type="Texture" id=5]
[ext_resource path="res://icons/settings_icon.svg" type="Texture" id=6]
[ext_resource path="res://icons/audio_icon.svg" type="Texture" id=7]
[ext_resource path="res://icons/display_icon.svg" type="Texture" id=8]
[ext_resource path="res://icons/controller_icon.svg" type="Texture" id=9]
[ext_resource path="res://fonts/res/popup_font_major.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/res/option_value_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://tools/labeled_slider.gd" type="Script" id=12]
[ext_resource path="res://fonts/res/popup_font_minor.tres" type="DynamicFont" id=13]
[ext_resource path="res://icons/language_icon.svg" type="Texture" id=14]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="OptionsPanel" type="PopupPanel"]
margin_right = 850.0
margin_bottom = 500.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SectionContainer" type="HBoxContainer" parent="MainContainer"]
margin_right = 842.0
margin_bottom = 43.0

[node name="AudioSectionButton" type="Button" parent="MainContainer/SectionContainer"]
margin_right = 165.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Audio"
icon = ExtResource( 7 )
clip_text = true
expand_icon = true

[node name="ControlSectionButton" type="Button" parent="MainContainer/SectionContainer"]
margin_left = 169.0
margin_right = 334.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
group = SubResource( 1 )
text = "Controls"
icon = ExtResource( 9 )
clip_text = true
expand_icon = true

[node name="GeneralSectionButton" type="Button" parent="MainContainer/SectionContainer"]
margin_left = 338.0
margin_right = 503.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
group = SubResource( 1 )
text = "General"
icon = ExtResource( 6 )
clip_text = true
expand_icon = true

[node name="MultiplayerSectionButton" type="Button" parent="MainContainer/SectionContainer"]
margin_left = 507.0
margin_right = 672.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
group = SubResource( 1 )
text = "Player"
icon = ExtResource( 5 )
clip_text = true
expand_icon = true

[node name="VideoSectionButton" type="Button" parent="MainContainer/SectionContainer"]
margin_left = 676.0
margin_right = 842.0
margin_bottom = 43.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 10 )
toggle_mode = true
group = SubResource( 1 )
text = "Video"
icon = ExtResource( 8 )
clip_text = true
expand_icon = true

[node name="OptionContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 47.0
margin_right = 842.0
margin_bottom = 378.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/OptionContainer"]
margin_right = 842.0
margin_bottom = 331.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="SectionParent" type="MarginContainer" parent="MainContainer/OptionContainer/ScrollContainer"]
margin_right = 842.0
margin_bottom = 122.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50

[node name="AudioContainer" type="GridContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent"]
margin_left = 50.0
margin_top = 10.0
margin_right = 792.0
margin_bottom = 122.0
columns = 2

[node name="MasterVolumeLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_right = 134.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 13 )
text = "Master Volume"
align = 2

[node name="opt_audio_master_volume" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_left = 138.0
margin_right = 742.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 12 )
display_percentage = true
font_override = ExtResource( 11 )

[node name="MusicVolumeLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_top = 29.0
margin_right = 134.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 13 )
text = "Music Volume"
align = 2

[node name="opt_audio_music_volume" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_left = 138.0
margin_top = 29.0
margin_right = 742.0
margin_bottom = 54.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 12 )
display_percentage = true
font_override = ExtResource( 11 )

[node name="SoundsVolumeLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_top = 58.0
margin_right = 134.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 13 )
text = "Sounds Volume"
align = 2

[node name="opt_audio_sounds_volume" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_left = 138.0
margin_top = 58.0
margin_right = 742.0
margin_bottom = 83.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 12 )
display_percentage = true
font_override = ExtResource( 11 )

[node name="EffectsVolumeLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_top = 87.0
margin_right = 134.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 13 )
text = "Object Volume"
align = 2

[node name="opt_audio_effects_volume" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer"]
margin_left = 138.0
margin_top = 87.0
margin_right = 742.0
margin_bottom = 112.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 12 )
display_percentage = true
font_override = ExtResource( 11 )

[node name="ControlContainer" type="VBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent"]
visible = false
margin_left = 50.0
margin_top = 10.0
margin_right = 792.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/ControlContainer"]
margin_right = 742.0
margin_bottom = 20.0
text = "This is the control section!"

[node name="GeneralContainer" type="VBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent"]
visible = false
margin_left = 50.0
margin_top = 10.0
margin_right = 792.0
margin_bottom = 260.0

[node name="LanguageContainer" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_right = 742.0
margin_bottom = 32.0

[node name="LanguageLabelContainer" type="HBoxContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageContainer"]
margin_right = 369.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 2

[node name="LanguageIcon" type="TextureRect" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageContainer/LanguageLabelContainer"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="LanguageLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageContainer/LanguageLabelContainer"]
margin_left = 288.0
margin_top = 3.0
margin_right = 369.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 13 )
text = "Language"
align = 2

[node name="opt_general_language" type="OptionButton" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageContainer"]
margin_left = 373.0
margin_right = 742.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )

[node name="LanguageWarningLabel" type="RichTextLabel" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_top = 36.0
margin_right = 742.0
margin_bottom = 57.0
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="Gap" type="Control" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_top = 61.0
margin_right = 742.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 10 )

[node name="AutosaveContainer" type="GridContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_top = 85.0
margin_right = 742.0
margin_bottom = 150.0
columns = 2

[node name="IntervalLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/AutosaveContainer"]
margin_top = 3.0
margin_right = 369.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
text = "Autosave Interval"
align = 2

[node name="opt_general_autosave_interval" type="OptionButton" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/AutosaveContainer"]
margin_left = 373.0
margin_right = 742.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )

[node name="FileCountLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/AutosaveContainer"]
margin_top = 37.0
margin_right = 369.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
text = "Autosave File Count"
align = 2

[node name="opt_general_autosave_file_count" type="SpinBox" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/AutosaveContainer"]
margin_left = 373.0
margin_top = 35.0
margin_right = 447.0
margin_bottom = 65.0
size_flags_horizontal = 0
min_value = 1.0
value = 1.0
align = 1

[node name="Gap2" type="Control" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_top = 154.0
margin_right = 742.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 10 )

[node name="MiscContainer" type="GridContainer" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer"]
margin_top = 178.0
margin_right = 742.0
margin_bottom = 270.0
columns = 2

[node name="SkipSplashScreenLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_top = 1.0
margin_right = 369.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
text = "Skip Splash Screen"
align = 2

[node name="opt_general_skip_splash_screen" type="CheckBox" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_left = 373.0
margin_right = 742.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="ShowWarningsLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_top = 33.0
margin_right = 369.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
text = "Show System Warnings"
align = 2

[node name="opt_general_show_warnings" type="CheckBox" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_left = 373.0
margin_top = 32.0
margin_right = 742.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="ShowErrorsLabel" type="Label" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_top = 65.0
margin_right = 369.0
margin_bottom = 90.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 13 )
text = "Show System Errors"
align = 2

[node name="opt_general_show_errors" type="CheckBox" parent="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/MiscContainer"]
margin_left = 373.0
margin_top = 64.0
margin_right = 742.0
margin_bottom = 92.0
size_flags_horizontal = 3

[node name="HintLabel" type="Label" parent="MainContainer"]
margin_top = 382.0
margin_right = 842.0
margin_bottom = 452.0
rect_min_size = Vector2( 0, 70 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_styles/normal = SubResource( 2 )
valign = 1
autowrap = true
clip_text = true

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 456.0
margin_right = 842.0
margin_bottom = 492.0

[node name="BackButton" type="Button" parent="MainContainer/ButtonContainer"]
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
focus_neighbour_right = NodePath("../ApplyButton")
custom_fonts/font = ExtResource( 2 )
text = "Back"
icon = ExtResource( 3 )
expand_icon = true

[node name="ButtonGap" type="Control" parent="MainContainer/ButtonContainer"]
margin_left = 104.0
margin_right = 728.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="MainContainer/ButtonContainer"]
margin_left = 732.0
margin_right = 842.0
margin_bottom = 36.0
rect_min_size = Vector2( 110, 0 )
focus_neighbour_left = NodePath("../BackButton")
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "Apply"
icon = ExtResource( 4 )
expand_icon = true

[connection signal="about_to_show" from="." to="." method="_on_OptionsPanel_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_OptionsPanel_popup_hide"]
[connection signal="pressed" from="MainContainer/SectionContainer/AudioSectionButton" to="." method="_on_AudioSectionButton_pressed"]
[connection signal="pressed" from="MainContainer/SectionContainer/ControlSectionButton" to="." method="_on_ControlSectionButton_pressed"]
[connection signal="pressed" from="MainContainer/SectionContainer/GeneralSectionButton" to="." method="_on_GeneralSectionButton_pressed"]
[connection signal="pressed" from="MainContainer/SectionContainer/MultiplayerSectionButton" to="." method="_on_MultiplayerSectionButton_pressed"]
[connection signal="pressed" from="MainContainer/SectionContainer/VideoSectionButton" to="." method="_on_VideoSectionButton_pressed"]
[connection signal="value_changed" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer/opt_audio_master_volume" to="." method="_on_opt_audio_master_volume_value_changed"]
[connection signal="value_changed" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer/opt_audio_music_volume" to="." method="_on_opt_audio_music_volume_value_changed"]
[connection signal="value_changed" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer/opt_audio_sounds_volume" to="." method="_on_opt_audio_sounds_volume_value_changed"]
[connection signal="value_changed" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/AudioContainer/opt_audio_effects_volume" to="." method="_on_opt_audio_effects_volume_value_changed"]
[connection signal="item_selected" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageContainer/opt_general_language" to="." method="_on_opt_general_language_item_selected"]
[connection signal="meta_clicked" from="MainContainer/OptionContainer/ScrollContainer/SectionParent/GeneralContainer/LanguageWarningLabel" to="." method="_on_LanguageWarningLabel_meta_clicked"]
[connection signal="pressed" from="MainContainer/ButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MainContainer/ButtonContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
